# histpat_toolkit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build_cython.py  example.py  pyproject.toml  pytest.ini  setup.py
doc/: image-pyramid.md
histpat_toolkit/: dzi_file.py  geom.py  masks.py
histpat_toolkit/algorithms/: base.py
histpat_toolkit/algorithms/segmentation/: base.py  segmentation.py
histpat_toolkit/algorithms/util/: color.py  config.py  image_source.py  modal_client.py  modal_model_runner.py  model_runner.py  patches.py
histpat_toolkit/image_pyramid/: __init__.py  base_image_pyramid.py  dzi_pyramid.py  image_pyramid.py  openslide_pyramid.py
histpat_toolkit/patch_extraction/: anchor_patch_extractor_helper.c
histpat_toolkit/patch_extraction/anchorizers/: base_tissue_anchorizer.py  grid_tissue_anchorizer.py  radius_tissue_anchorizer.py  radius_tissue_helper.c  radius_tissue_helper.pyx  trivial_tissue_anchorizer.py
histpat_toolkit/patch_extraction/labelers/: base_tissue_labeler.py  bfs_nearest_labeler.py  watershed_tissue_labeler.py
histpat_toolkit/patch_extraction/modifiers/: __init__.py
histpat_toolkit/patch_extraction/rectangularizers/: min_area_rectangularizer.py
histpat_toolkit/tissue_detection/: __init__.py  adaptive_gaussian_tissue_detector.py  adaptive_mean_tissue_detector.py  adaptive_tissue_detector.py  base_tissue_detector.py  nn_tissue_detector.py  nn_tissue_detector_worker.py  otsu_blur_tissue_detector.py  otsu_tissue_detector.py  threshold_tissue_detector.py
notebooks/: test_dzi_pyramid.ipynb  test_image_pyramid.ipynb  test_shapes_cropping.ipynb  test_tissue_detector.ipynb
tests/: test_geom.py  test_subprocess_nn_tissue_detector.py
tissue_detection/: adaptive_tissue_detector.py  base_tissue_detector.py  threshold_tissue_detector.py
