[tool.poetry]
name = "histpat_toolkit"
version = "0.5.1"
description = "A set of tools to process and analyze histopathology scans"
authors = ["Jarosław Kwiecień <kwiecienjaro@gmail.com>"]
readme = "README.md"
packages = [{include = "histpat_toolkit"}]
include = [{path = "histpat_toolkit/**/*.so", format = "wheel"}]

[tool.poetry.dependencies]
numpy = ">=1.25.0"
opencv-contrib-python = ">=4.8.0.74"
openvino = "^2025.3.0"
pydantic = ">=2.4.2"
python = ">=3.10"
svgwrite = "^1.4.3"
tcod = ">=16.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^6.0.0"
ruff = "^0.11.0"

[tool.ruff]
line-length = 120
fix = true
exclude = ["notebooks/*"]

[tool.ruff.lint]
select = ["F", "I", "E"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core", "Cython", "numpy", "setuptools", "pydantic"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "build_cython.py"
generate-setup-file = true
